{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 17,
  "lineage": "cb355424-1c86-b02a-416d-b8037b4d01fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199942131337:internet-gateway/igw-076b396541754648b",
            "id": "igw-076b396541754648b",
            "owner_id": "199942131337",
            "region": "us-east-1",
            "tags": {
              "Name": "is698-igw"
            },
            "tags_all": {
              "Name": "is698-igw"
            },
            "vpc_id": "vpc-0fe9d9a6f89bf621b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199942131337:route-table/rtb-0b31a01c267554cf8",
            "id": "rtb-0b31a01c267554cf8",
            "owner_id": "199942131337",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-076b396541754648b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "is698-public-rt"
            },
            "tags_all": {
              "Name": "is698-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe9d9a6f89bf621b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "199942131337",
            "id": "rtb-0b31a01c267554cf8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a82c59b5c003af6",
            "region": "us-east-1",
            "route_table_id": "rtb-0b31a01c267554cf8",
            "subnet_id": "subnet-041456869f5273777"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034cf47766ede6a99",
            "region": "us-east-1",
            "route_table_id": "rtb-0b31a01c267554cf8",
            "subnet_id": "subnet-0fa64dae1179802a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199942131337:security-group/sg-0f099f02019046c48",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f099f02019046c48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "is698-alb-sg",
            "name_prefix": "",
            "owner_id": "199942131337",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "is698-alb-sg"
            },
            "tags_all": {
              "Name": "is698-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe9d9a6f89bf621b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "199942131337",
            "id": "sg-0f099f02019046c48",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199942131337:security-group/sg-02ec192957f3f640a",
            "description": "Database security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ec192957f3f640a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0887088ef97f02ebb"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "is698-db-sg",
            "name_prefix": "",
            "owner_id": "199942131337",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "is698-db-sg"
            },
            "tags_all": {
              "Name": "is698-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe9d9a6f89bf621b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "199942131337",
            "id": "sg-02ec192957f3f640a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199942131337:security-group/sg-0887088ef97f02ebb",
            "description": "Web server security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0887088ef97f02ebb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f099f02019046c48"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "is698-web-sg",
            "name_prefix": "",
            "owner_id": "199942131337",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "is698-web-sg"
            },
            "tags_all": {
              "Name": "is698-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe9d9a6f89bf621b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "199942131337",
            "id": "sg-0887088ef97f02ebb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_from_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-1031555294",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-02ec192957f3f640a",
            "security_group_rule_id": "sgr-0f5d2ddc889b5a46d",
            "self": false,
            "source_security_group_id": "sg-0887088ef97f02ebb",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2082353017",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0887088ef97f02ebb",
            "security_group_rule_id": "sgr-0e94d2c006a308238",
            "self": false,
            "source_security_group_id": "sg-0f099f02019046c48",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199942131337:subnet/subnet-0423ffc09446d8bd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0423ffc09446d8bd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "199942131337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "is698-private-subnet"
            },
            "tags_all": {
              "Name": "is698-private-subnet"
            },
            "vpc_id": "vpc-0fe9d9a6f89bf621b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "199942131337",
            "id": "subnet-0423ffc09446d8bd9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199942131337:subnet/subnet-0af826c560279ef09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af826c560279ef09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "199942131337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "is698-private-subnet-b"
            },
            "tags_all": {
              "Name": "is698-private-subnet-b"
            },
            "vpc_id": "vpc-0fe9d9a6f89bf621b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "199942131337",
            "id": "subnet-0af826c560279ef09",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199942131337:subnet/subnet-041456869f5273777",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041456869f5273777",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "199942131337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "is698-public-subnet"
            },
            "tags_all": {
              "Name": "is698-public-subnet"
            },
            "vpc_id": "vpc-0fe9d9a6f89bf621b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "199942131337",
            "id": "subnet-041456869f5273777",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199942131337:subnet/subnet-0fa64dae1179802a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa64dae1179802a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "199942131337",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "is698-public-subnet-b"
            },
            "tags_all": {
              "Name": "is698-public-subnet-b"
            },
            "vpc_id": "vpc-0fe9d9a6f89bf621b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "199942131337",
            "id": "subnet-0fa64dae1179802a9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:199942131337:vpc/vpc-0fe9d9a6f89bf621b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-055c76d34b955df8d",
            "default_route_table_id": "rtb-0241882391f886f7d",
            "default_security_group_id": "sg-07c5ef32fe70d4521",
            "dhcp_options_id": "dopt-03d2e50b0d6c7f54a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fe9d9a6f89bf621b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0241882391f886f7d",
            "owner_id": "199942131337",
            "region": "us-east-1",
            "tags": {
              "Name": "is698-vpc"
            },
            "tags_all": {
              "Name": "is698-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "199942131337",
            "id": "vpc-0fe9d9a6f89bf621b",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}